# cookbook

./: .gitignore  README.md  pyproject.toml  sqlite3.exe:Zone.Identifier
cookbook/: settings.py
entities/: apps.py  models.py
events/: apps.py  models.py
